[gd_scene load_steps=12 format=3 uid="uid://dogeixvcuf5pr"]

[ext_resource type="Script" uid="uid://bfmmhr5ea5jlk" path="res://scenes/game/stages/allfinal.gd" id="1_rhf22"]
[ext_resource type="Texture2D" uid="uid://ckg15chx3ma7l" path="res://assets/images/game/stages/allfinal/act1/act1.png" id="2_ym5hn"]
[ext_resource type="SpriteFrames" uid="uid://dqtbnvb0aw63y" path="res://assets/images/game/stages/allfinal/act1/act1_stat.xml" id="3_12osj"]
[ext_resource type="SpriteFrames" uid="uid://c0tv7vjwmlt8x" path="res://assets/images/game/stages/allfinal/act1/All_Stars_Intro.xml" id="3_rhf22"]
[ext_resource type="SpriteFrames" uid="uid://070vl1paesi0" path="res://assets/images/game/stages/allfinal/act1/Act_2_Intro.xml" id="4_o3ftt"]
[ext_resource type="Texture2D" uid="uid://bi5ih7q0ujj07" path="res://assets/images/game/stages/allfinal/act1/act1_sky.png" id="4_r5u5s"]
[ext_resource type="Texture2D" uid="uid://c24akv46fwcdi" path="res://assets/images/game/stages/allfinal/act1/act1_floor.png" id="5_5m7x7"]
[ext_resource type="SpriteFrames" uid="uid://dl1p257lsjkyq" path="res://assets/images/game/stages/allfinal/act4/Act_4_Voiceline.xml" id="5_m5fm5"]
[ext_resource type="Texture2D" uid="uid://b8x8dsjoux7bk" path="res://assets/images/game/stages/allfinal/act1/act1_skyline.png" id="6_ds180"]
[ext_resource type="Texture2D" uid="uid://x0sk4dma5nrj" path="res://assets/images/game/stages/allfinal/act1/act1_bgbuildings.png" id="6_owilp"]
[ext_resource type="Texture2D" uid="uid://cmjf4pjjxh3g2" path="res://assets/images/game/stages/allfinal/act1/act1_fg.png" id="8_dr0x7"]

[node name="Stage" type="Node2D" node_paths=PackedStringArray("cam")]
script = ExtResource("1_rhf22")
cam = NodePath("cam")
default_cam_zoom = 0.7

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Act1" type="Sprite2D" parent="CanvasLayer"]
visible = false
texture = ExtResource("2_ym5hn")
centered = false

[node name="bg" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="intros" type="Node2D" parent="CanvasLayer"]

[node name="intro" type="AnimatedSprite2D" parent="CanvasLayer/intros"]
visible = false
sprite_frames = ExtResource("3_rhf22")
animation = &"intro anim"
autoplay = "intro anim"
frame = 77
frame_progress = 1.0
centered = false

[node name="act2_intro" type="Node2D" parent="CanvasLayer/intros"]

[node name="gf" type="AnimatedSprite2D" parent="CanvasLayer/intros/act2_intro"]
visible = false
position = Vector2(640, 360)
sprite_frames = ExtResource("4_o3ftt")
animation = &"Anim1"

[node name="eyes" type="AnimatedSprite2D" parent="CanvasLayer/intros/act2_intro"]
visible = false
position = Vector2(640, 360)
sprite_frames = ExtResource("4_o3ftt")
animation = &"EyesBG"
frame = 29
frame_progress = 1.0

[node name="act_4_intro" type="Node2D" parent="CanvasLayer/intros"]

[node name="intro" type="AnimatedSprite2D" parent="CanvasLayer/intros/act_4_intro"]
visible = false
sprite_frames = ExtResource("5_m5fm5")
animation = &"thingy"
frame = 270
frame_progress = 1.0
centered = false

[node name="cam" type="Camera2D" parent="."]
position = Vector2(-250, 840)
zoom = Vector2(0.4, 0.4)
position_smoothing_enabled = true

[node name="act 1" type="Node2D" parent="."]

[node name="04-04" type="Parallax2D" parent="act 1"]
scroll_scale = Vector2(0.4, 0.4)

[node name="stat" type="AnimatedSprite2D" parent="act 1/04-04"]
position = Vector2(-900, -860)
scale = Vector2(4, 4)
sprite_frames = ExtResource("3_12osj")
animation = &"act1_static"
autoplay = "act1_static"
frame_progress = 0.952687
centered = false

[node name="06-06" type="Parallax2D" parent="act 1"]

[node name="Act1Sky" type="Sprite2D" parent="act 1/06-06"]
position = Vector2(-1850, -660)
texture = ExtResource("4_r5u5s")
centered = false

[node name="08-08" type="Parallax2D" parent="act 1"]
scroll_scale = Vector2(0.8, 0.8)
scroll_offset = Vector2(101, 73)

[node name="Act1Skyline" type="Sprite2D" parent="act 1/08-08"]
position = Vector2(-2100, -660)
texture = ExtResource("6_ds180")
centered = false

[node name="Act1Bgbuildings" type="Sprite2D" parent="act 1/08-08"]
position = Vector2(-2100, -660)
texture = ExtResource("6_owilp")
centered = false

[node name="Act1Floor" type="Sprite2D" parent="act 1"]
position = Vector2(-2300, -660)
texture = ExtResource("5_5m7x7")
centered = false

[node name="Act1Fg" type="Sprite2D" parent="act 1"]
position = Vector2(-4301, -1445)
scale = Vector2(1.7, 1.7)
texture = ExtResource("8_dr0x7")
centered = false

[node name="dad_position" type="Marker2D" parent="."]
position = Vector2(-1172, 1181)

[node name="gf_position" type="Marker2D" parent="."]
position = Vector2(849, 840)

[node name="bf_position" type="Marker2D" parent="."]
position = Vector2(478, 840)
